sas-core/main/default/objects/User/fields/FCS_ChatName__c.field-meta.xml
<CustomField>
    <fullName>FCS_ChatName__c</fullName>
    <description>Agent name diplayed in Chat</description>
    <formula>IF(ISBLANK(FCS_CustomChatName__c), FirstName, FCS_CustomChatName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Agent name diplayed in Chat</inlineHelpText>
    <label>Chat Name</label>
    <type>Text</type>
</CustomField>