sas-core/main/default/objects/User/fields/FCS_CustomChatName__c.field-meta.xml
<CustomField>
    <fullName>FCS_CustomChatName__c</fullName>
    <description>Custom Nickname for Agents in Chat</description>
    <inlineHelpText>Custom Nickname for Agents in Chat</inlineHelpText>
    <label>Custom Chat Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>