sas-core/main/default/objects/User/fields/FCS_Site__c.field-meta.xml
<CustomField>
    <fullName>FCS_Site__c</fullName>
    <description>The Site the User belongs to.</description>
    <inlineHelpText>The Site the User belongs to.</inlineHelpText>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FCS_Site</valueSetName>
    </valueSet>
</CustomField>