sas-core/main/default/objects/User/fields/FCS_SubTeam__c.field-meta.xml
<CustomField>
    <fullName>FCS_SubTeam__c</fullName>
    <description>The sub team that the user belongs to</description>
    <inlineHelpText>The sub team that the user belongs to</inlineHelpText>
    <label>Sub Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FCS_SubTeam</valueSetName>
    </valueSet>
</CustomField>