sas-core/main/default/objects/User/fields/FCS_Team__c.field-meta.xml
<CustomField>
    <fullName>FCS_Team__c</fullName>
    <description>The team that the user belongs to</description>
    <inlineHelpText>The team the User belongs to.</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FCS_Team</valueSetName>
    </valueSet>
</CustomField>