sas-core/main/default/objects/User/fields/FCS_Vendor__c.field-meta.xml
<CustomField>
    <fullName>FCS_Vendor__c</fullName>
    <description>The vendor which the user belongs to.</description>
    <inlineHelpText>The vendor which the user belongs to.</inlineHelpText>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FCS_Vendor</valueSetName>
    </valueSet>
</CustomField>