sas-core/main/default/objects/User/fields/FCS_VirtualOrganization__c.field-meta.xml
<CustomField>
    <fullName>FCS_VirtualOrganization__c</fullName>
    <description>The Virtual organization the User belongs to.</description>
    <inlineHelpText>The Virtual organization the User belongs to.</inlineHelpText>
    <label>Virtual Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FCS_Virtual_Organization</valueSetName>
    </valueSet>
</CustomField>