sas-core/main/default/objects/User/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>The Site the User belongs to.</description>
    <inlineHelpText>The Site the User belongs to.</inlineHelpText>
    <label>Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>