sas-core/main/default/objects/User/fields/SubTeam__c.field-meta.xml
<CustomField>
    <fullName>SubTeam__c</fullName>
    <description>The sub team of the user</description>
    <inlineHelpText>The sub team of the user</inlineHelpText>
    <label>Sub Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SubTeam</valueSetName>
    </valueSet>
</CustomField>