sas-core/main/default/objects/User/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>The team the User belongs to.</description>
    <inlineHelpText>The team the User belongs to.</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Team 1</fullName>
            </value>
            <value>
                <fullName>Team 2</fullName>
            </value>
            <value>
                <fullName>Team 3</fullName>
            </value>
            <value>
                <fullName>Team 4</fullName>
            </value>
            <value>
                <fullName>Team 5</fullName>
            </value>
            <value>
                <fullName>Team 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>