sas-core/main/default/objects/User/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>The vendor which the user belongs to.</description>
    <label>Vendor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>