sas-core/main/default/objects/User/fields/VirtualOrganization__c.field-meta.xml
<CustomField>
    <fullName>VirtualOrganization__c</fullName>
    <description>The Virtual organization the User belongs to.</description>
    <inlineHelpText>The Virtual organization the User belongs to.</inlineHelpText>
    <label>Virtual Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>